--- a/11.md
+++ b/11.md
@@ -1,2 +1,5 @@
 ## Prometheus 介绍
 
+Prometheus是继Kubernetes之后CNCF基金会的第二个项目，最早也是孵化于Google内部的Brogmon监控系统，后来由前Google工程师在SoundCloud开源，现在已经成为云
+原生生态的标准监控系统。
+Prometheus是一个开源的完整监控解决方案，涵盖数据采集、查询、告警、展示整个监控流程，下图是Prometheus的架构图：
