--- a/11.md
+++ b/11.md
@@ -36,3 +36,8 @@ promethus的告警被分成两个部分：
 1.通过在Prometheus中定义告警触发条件规则，并向Alertmanager发送告警信息
 
 2.Alertmanager作为一个独立的组件，负责接收并处理来自Prometheus Server(也可以是其它的客户端程序)的告警信息
+
+配置文件在
+```template
+/manifests/prometheus-rules.yaml
+```
