--- a/11.md
+++ b/11.md
@@ -41,3 +41,9 @@ promethus的告警被分成两个部分：
 ```template
 /manifests/prometheus-rules.yaml
 ```
+
+## Prometheus Operator
+
+对于云原生基础的Kubernetes，Prometheus对其有着代码级别的支持，Kubernetes中的组件原生支持Prometheus的metrics路径，而且能够通过服务发现的形式自动监控集群。在Kubernetes中部署Prometheus可以通过operator的框架，下图是prometheus-operator的架构：
+
+![这里随便写文字](https://github.com/yangjie1993/prometheus/blob/master/prometheus-operator1.png)
