--- a/11.md
+++ b/11.md
@@ -57,3 +57,26 @@ promethus的告警被分成两个部分：
 - Service： Service 资源主要用来对应 Kubernetes 集群中的 Metrics Server Pod，来提供给 ServiceMonitor 选取让 Prometheus Server 来获取信息。简单的说就是 Prometheus 监控的对象，例如之前了解的 Node Exporter Service、Mysql Exporter Service 等等。
 - Alertmanager： Alertmanager 也是一个自定义资源类型，由 Operator 根据资源描述内容来部署 Alertmanager 集群。
 
+只有在ServiceMonitor的yaml文件中匹配上了k8s-app的ServiceMonitor才能被Prometheus server采集：
+
+```template
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: kube-controller-manager
+  labels:
+    k8s-app: kube-controller-manager    ##Prometheus中的ServiceMonitor选择器
+spec:
+  jobLabel: k8s-app
+  endpoints:
+  - port: http-metrics    ##对应service的端口名
+    interval: 30s
+  selector:
+    matchLabels:
+      k8s-app: kube-controller-manager    ##选择对应label的service
+  namespaceSelector:
+    matchNames:
+    - kube-system     ##选择对应namespace
+```
+
+也就是Prometheus server选取对应的ServiceMonitor进行监控，而ServiceMonitor会对应到相应的service，service会对应到endpoints，Prometheus server通过选择ServiceMonitor就能访问到最终的监控目标。
