--- a/11.md
+++ b/11.md
@@ -80,3 +80,27 @@ spec:
 ```
 
 也就是Prometheus server选取对应的ServiceMonitor进行监控，而ServiceMonitor会对应到相应的service，service会对应到endpoints，Prometheus server通过选择ServiceMonitor就能访问到最终的监控目标。
+
+
+## 在Kubernetes中部署Prometheus Operator
+
+创建单独的namespace：
+
+```template
+kubectl create -f /manifests/00namespace-namespace.yaml
+```
+
+创建三个CRD：
+
+```template
+kubectl create -f /manifests/0prometheus-operator-0alertmanagerCustomResourceDefinition.yaml 
+                  /manifests/0prometheus-operator-0prometheusCustomResourceDefinition.yaml
+                  /manifests/0prometheus-operator-0servicemonitorCustomResourceDefinition.yaml
+                  
+$ kubectl get crd 
+NAME                                    KIND
+alertmanagers.monitoring.coreos.com     CustomResourceDefinition.v1beta1.apiextensions.k8s.io
+prometheuses.monitoring.coreos.com      CustomResourceDefinition.v1beta1.apiextensions.k8s.io
+servicemonitors.monitoring.coreos.com   CustomResourceDefinition.v1beta1.apiextensions.k8s.io
+```
+
