--- a/11.md
+++ b/11.md
@@ -104,3 +104,53 @@ prometheuses.monitoring.coreos.com      CustomResourceDefinition.v1beta1.apiexte
 servicemonitors.monitoring.coreos.com   CustomResourceDefinition.v1beta1.apiextensions.k8s.io
 ```
 
+## node-export 介绍/安装
+
+node-export 主要主要是监控kubernetes 集群node 物理主机：cpu、memory、network、disk 等基础监控资源。
+使用daemonset 方式 自动为每个node部署监控agent。
+
+```template
+kubectl create -f /manifests/node-exporter-*.yaml
+                  
+```
+## Kube-state-metrics 介绍/安装
+
+kube-state metrics是一个简单的服务，它侦听Kubernetes API服务器并生成对象状态的指标。它并不关注单个Kubernetes组件的健康状况，而是关注内部各种对象(如deployments, nodes and pods.)的健康状况。
+
+```template
+kubectl create -f /manifests/kube-state-metrics-*.yaml
+                  
+```
+
+## 安装 Prometheus 和 ServiceMonitor
+
+
+```template
+kubectl create -f /manifests/prometheus-*.yaml
+                  
+```
+
+## 监控kube-controller-manager kube-scheduler
+
+这个ServiceMonitor对应指定的是kube-system命名空间的打了k8s-app: kube-controller-manager标签的service，不是对应的endpoint的标签，对应endpoint端口名是http-metrics
+```template
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: kube-controller-manager
+  labels:
+    k8s-app: kube-controller-manager
+spec:
+  jobLabel: k8s-app
+  endpoints:
+  - port: http-metrics
+    interval: 30s
+  selector:
+    matchLabels:
+      k8s-app: kube-controller-manager
+  namespaceSelector:
+    matchNames:
+    - kube-system
+                  
+```
+
