--- a/11.md
+++ b/11.md
@@ -154,3 +154,7 @@ spec:
                   
 ```
 
+## 登录prometheus的UI查看对应target是不是都是up状态，up状态说明数据pull正常
+
+
+![这里随便写文字](https://github.com/yangjie1993/prometheus/blob/master/360%E6%88%AA%E5%9B%BE16831105586862.png)
