--- a/11.md
+++ b/11.md
@@ -39,7 +39,80 @@ promethus的告警被分成两个部分：
 
 配置文件在
 ```template
-/manifests/prometheus-rules.yaml
+/manifests/alertmanager-secret.yaml
+```
+
+在prometheus.yml中指定规则文件
+```template
+ALERT <alert name>
+  IF <expression>
+  [ FOR <duration> ]
+  [ LABELS <label set> ]
+  [ ANNOTATIONS <label set> ]
+  
+  alert: CPUThrottlingHigh
+  expr: 100
+    * sum by(container_name, pod_name, namespace) (increase(container_cpu_cfs_throttled_periods_total[5m]))
+    / sum by(container_name, pod_name, namespace) (increase(container_cpu_cfs_periods_total[5m]))
+    > 25
+  for: 1m
+  labels:
+    severity: warning
+  annotations:
+    message: '{{ printf "%0.0f" $value }}% throttling of CPU in namespace {{
+      $labels.namespace }} for container {{ $labels.container_name }} in pod {{ $labels.pod_name
+      }}.'
+  runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-cputhrottlinghigh
+```
+其中：
+
+Alert name是警报标识符。它不需要是唯一的。
+
+Expression是为了触发警报而被评估的条件。它通常使用现有指标作为/metrics端点返回的指标。
+
+Duration是规则必须有效的时间段。例如，5s表示5秒。
+
+Label set是将在消息模板中使用的一组标签。
+
+# 通知规则
+```template
+global:
+  resolve_timeout: 7m
+  http_config: {}
+  smtp_from: jie.yang@qishon.com
+  smtp_hello: localhost
+  smtp_smarthost: smtp.exmail.qq.com:465
+  smtp_auth_username: jie.yang@qishon.com
+  smtp_auth_password: <secret>
+  pagerduty_url: https://events.pagerduty.com/v2/enqueue
+  hipchat_api_url: https://api.hipchat.com/
+  opsgenie_api_url: https://api.opsgenie.com/
+  wechat_api_url: https://qyapi.weixin.qq.com/cgi-bin/
+  victorops_api_url: https://alert.victorops.com/integrations/generic/20131114/alert/
+route:
+  receiver: email
+  group_by:
+  - job
+  group_wait: 30s
+  group_interval: 1h
+  repeat_interval: 1h
+receivers:
+- name: email
+  email_configs:
+  - send_resolved: false
+    to: 651025880@qq.com
+    from: jie.yang@qishon.com
+    hello: localhost
+    smarthost: smtp.exmail.qq.com:465
+    auth_username: jie.yang@qishon.com
+    auth_password: <secret>
+    headers:
+      From: jie.yang@qishon.com
+      Subject: '[WARN] 报警邮件'
+      To: 651025880@qq.com
+    html: '{{ template "email.default.html" . }}'
+    require_tls: false
+templates: []
 ```
 
 ## Prometheus Operator
@@ -128,6 +201,40 @@ kubectl create -f /manifests/kube-state-metrics-*.yaml
 ```template
 kubectl create -f /manifests/prometheus-*.yaml
                   
+```
+# prometheus配置文件的设定
+
+```template
+# Prometheus全局配置项
+global:
+  scrape_interval:     15s # 设定抓取数据的周期，默认为1min
+  evaluation_interval: 15s # 设定更新rules文件的周期，默认为1min
+  scrape_timeout: 15s # 设定抓取数据的超时时间，默认为10s
+  external_labels: # 额外的属性，会添加到拉取得数据并存到数据库中
+    prometheus: monitoring/k8s
+    prometheus_replica: prometheus-k8s-0
+
+
+# Alertmanager配置
+alerting:
+ alertmanagers:
+ ......
+     
+# rule配置，首次读取默认加载，之后根据evaluation_interval设定的周期加载
+rule_files:
+ - /etc/prometheus/rules/prometheus-k8s-rulefiles-0/*.yaml
+ - "prometheus_rules.yml"
+
+# scape配置
+scrape_configs:
+- job_name: 'prometheus' # job_name默认写入timeseries的labels中，可以用于查询使用
+  scrape_interval: 15s # 抓取周期，默认采用global配置
+  static_configs: # 静态配置
+  - targets: ['localdns:9090'] # prometheus所要抓取数据的地址，即instance实例项
+
+- job_name: 'example-random'
+  static_configs:
+  - targets: ['localhost:8080']      
 ```
 
 ## 监控kube-controller-manager kube-scheduler
